force-app/main/default/objects/Opportunity/fields/Agreement_Type__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Type__c</fullName>
    <label>Agreement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Warranty Sales Agreement (WSA)</fullName>
                <default>true</default>
                <label>Warranty Sales Agreement (WSA)</label>
            </value>
            <value>
                <fullName>Marketing Sales Agreement (MSA)</fullName>
            </value>
            <value>
                <fullName>Advertising Agreement</fullName>
            </value>
            <value>
                <fullName>No Agreement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>