force-app/main/default/objects/Opportunity/fields/Billing_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Billing_Vehicle__c</fullName>
    <label>Billing Vehicle</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Payroll Deduct</fullName>
            </value>
            <value>
                <fullName>On_Bill</fullName>
                <label>On Bill</label>
            </value>
            <value>
                <fullName>Credit or Debit Card</fullName>
            </value>
            <value>
                <fullName>Cable Bill</fullName>
            </value>
            <value>
                <fullName>Telecom Bill</fullName>
            </value>
            <value>
                <fullName>Mortgage Bill</fullName>
            </value>
            <value>
                <fullName>Utility Bill</fullName>
            </value>
            <value>
                <fullName>DDA</fullName>
            </value>
            <value>
                <fullName>Home Security Bill</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Debit Card</fullName>
            </value>
            <value>
                <fullName>Funded by Client</fullName>
            </value>
            <value>
                <fullName>TBD</fullName>
            </value>
            <value>
                <fullName>Billing Vehicle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>