force-app/main/default/objects/Opportunity/fields/Call_Report__c.field-meta.xml
<CustomField>
    <fullName>Call_Report__c</fullName>
    <description>Call Report URL field for Quip</description>
    <label>Call Report</label>
    <type>Url</type>
</CustomField>