force-app/main/default/objects/Opportunity/fields/Client_Size__c.field-meta.xml
<CustomField>
    <fullName>Client_Size__c</fullName>
    <label>Client Size</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>