force-app/main/default/objects/Opportunity/fields/Contract_Executed__c.field-meta.xml
<CustomField>
    <fullName>Contract_Executed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contract Executed</label>
    <type>Checkbox</type>
</CustomField>