force-app/main/default/objects/Opportunity/fields/Cost_per_Acquisition__c.field-meta.xml
<CustomField>
    <fullName>Cost_per_Acquisition__c</fullName>
    <label>Cost per Acquisition</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>