force-app/main/default/objects/Opportunity/fields/Desired_Go_Live_Date__c.field-meta.xml
<CustomField>
    <fullName>Desired_Go_Live_Date__c</fullName>
    <label>Desired Go Live Date</label>
    <type>Date</type>
</CustomField>