force-app/main/default/objects/Opportunity/fields/Est_Incr_Nxt_Yr_Earned_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Est_Incr_Nxt_Yr_Earned_Revenue__c</fullName>
    <formula>One_Year_Earned_Revenue_Total__c *
	Master_Client_Campaign__r.Estimated_of_Annual_Campaigns__c  *
	0.5 * 
	((365-Number_of_Marketing_Days_in_Year__c)/365)</formula>
    <label>Projected Next Year Earned Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>