force-app/main/default/objects/Opportunity/fields/Est_Incr_Nxt_Yr_Ern_Rev_Prob_Adj__c.field-meta.xml
<CustomField>
    <fullName>Est_Incr_Nxt_Yr_Ern_Rev_Prob_Adj__c</fullName>
    <formula>Est_Incr_Nxt_Yr_Earned_Revenue__c  *  Probability</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Projected Next Year Incremental Earned Revenue Prob Adj</inlineHelpText>
    <label>Projected Nxt Yr Ernd Rev Prob Adj</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>