force-app/main/default/objects/Opportunity/fields/Estimated_Annual_Gross_Sales__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Annual_Gross_Sales__c</fullName>
    <formula>Master_Client_Campaign__r.Est_Annual_Gross_Sales__c</formula>
    <label>Estimated Annual Gross Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>