force-app/main/default/objects/Opportunity/fields/Estimated_Annual_Gross_Sales_HMS__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Annual_Gross_Sales_HMS__c</fullName>
    <description>HMS</description>
    <label>Estimated Annual Gross Sales - HMS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>