force-app/main/default/objects/Opportunity/fields/Estimated_Marketing_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Marketing_Start_Date__c</fullName>
    <label>Estimated Marketing Start Date</label>
    <type>Date</type>
</CustomField>