force-app/main/default/objects/Opportunity/fields/Financial_model_adjustments__c.field-meta.xml
<CustomField>
    <fullName>Financial_model_adjustments__c</fullName>
    <label>Financial model adjustments</label>
    <type>TextArea</type>
</CustomField>