force-app/main/default/objects/Opportunity/fields/Financial_Underwriting_Considerations__c.field-meta.xml
<CustomField>
    <fullName>Financial_Underwriting_Considerations__c</fullName>
    <label>Financial/Underwriting Considerations</label>
    <type>TextArea</type>
</CustomField>