force-app/main/default/objects/Opportunity/fields/Five_Year_Earned_Revenue_Total__c.field-meta.xml
<CustomField>
    <fullName>Five_Year_Earned_Revenue_Total__c</fullName>
    <label>Projected Single Campaign 5 year Revenue</label>
    <summarizedField>OpportunityLineItem.Five_Year_Earned_Revenue__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>