force-app/main/default/objects/Opportunity/fields/History_Marketing_Subscription_Services__c.field-meta.xml
<CustomField>
    <fullName>History_Marketing_Subscription_Services__c</fullName>
    <label>History Marketing Subscription Services</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>