force-app/main/default/objects/Opportunity/fields/Ideation__c.field-meta.xml
<CustomField>
    <fullName>Ideation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A checked box identifies an opportunity that is currently in ideation (meaning no contact has been made with the client yet)</description>
    <inlineHelpText>Check this box if you have not yet made contact with the client.</inlineHelpText>
    <label>Ideation</label>
    <type>Checkbox</type>
</CustomField>