force-app/main/default/objects/Opportunity/fields/In_Salesbook__c.field-meta.xml
<CustomField>
    <fullName>In_Salesbook__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to indicate the opportunity is in Salesbook.</description>
    <inlineHelpText>Check this box if the opportunity is in Salesbook.  Do not check this box if the opportunity is not in Salesbook.</inlineHelpText>
    <label>In Salesbook</label>
    <type>Checkbox</type>
</CustomField>