force-app/main/default/objects/Opportunity/fields/Incumbent_Provider__c.field-meta.xml
<CustomField>
    <fullName>Incumbent_Provider__c</fullName>
    <label>Incumbent Provider</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2-10</fullName>
            </value>
            <value>
                <fullName>Achosa Home Warranty</fullName>
            </value>
            <value>
                <fullName>American Home Shield</fullName>
            </value>
            <value>
                <fullName>America&apos;s Preferred</fullName>
            </value>
            <value>
                <fullName>Choice Home Warranty</fullName>
            </value>
            <value>
                <fullName>Fidelity</fullName>
            </value>
            <value>
                <fullName>First American</fullName>
            </value>
            <value>
                <fullName>HSA Home Warranty</fullName>
            </value>
            <value>
                <fullName>HMS</fullName>
            </value>
            <value>
                <fullName>Home Warranty of America</fullName>
            </value>
            <value>
                <fullName>Old Republic</fullName>
            </value>
            <value>
                <fullName>Super</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>ABC Home Warranty</fullName>
                <isActive>false</isActive>
                <label>ABC Home Warranty</label>
            </value>
            <value>
                <fullName>American Residential Warranty</fullName>
                <isActive>false</isActive>
                <label>American Residential Warranty</label>
            </value>
            <value>
                <fullName>Global Home USA</fullName>
                <isActive>false</isActive>
                <label>Global Home USA</label>
            </value>
            <value>
                <fullName>Home Security of America</fullName>
                <isActive>false</isActive>
                <label>Home Security of America</label>
            </value>
            <value>
                <fullName>Home Warranty Inc.</fullName>
                <isActive>false</isActive>
                <label>Home Warranty Inc.</label>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
            <value>
                <fullName>Residential Warranty Services</fullName>
                <isActive>false</isActive>
                <label>Residential Warranty Services</label>
            </value>
            <value>
                <fullName>TMI Home Warranty</fullName>
                <isActive>false</isActive>
                <label>TMI Home Warranty</label>
            </value>
            <value>
                <fullName>The Warranty Group</fullName>
                <isActive>false</isActive>
                <label>The Warranty Group</label>
            </value>
            <value>
                <fullName>Universal</fullName>
                <isActive>false</isActive>
                <label>Universal</label>
            </value>
            <value>
                <fullName>Unknown</fullName>
                <isActive>false</isActive>
                <label>Unknown</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>