force-app/main/default/objects/Opportunity/fields/Length_of_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Length_of_Agreement__c</fullName>
    <label>Length of Agreement (in years)</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>