force-app/main/default/objects/Opportunity/fields/Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>Lost_Reason__c</fullName>
    <label>Lost Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Profitable for CCHS</fullName>
                <label>Not Profitable for Cinch</label>
            </value>
            <value>
                <fullName>NotProfitable for Client</fullName>
            </value>
            <value>
                <fullName>Client didn’t approve</fullName>
            </value>
            <value>
                <fullName>Client cancelled</fullName>
            </value>
            <value>
                <fullName>Client put on hold</fullName>
            </value>
            <value>
                <fullName>CCHS put on hold</fullName>
                <label>Cinch put on hold</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Client Out-of-Business</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>