force-app/main/default/objects/Opportunity/fields/Marketing_Method__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Method__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Marketing Methods Available: Call Center, Cross Sell, Direct Mail, Email, Embed, Insert, OBTM (Outbound Telemarketing), Point-of-Need, Point-of-Sale, Statement, Transfer, Website, Wholesale.</inlineHelpText>
    <label>Marketing Method</label>
    <referenceTo>Marketing_Method__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>