force-app/main/default/objects/Opportunity/fields/Marketing_Playbook__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Playbook__c</fullName>
    <label>Marketing Playbook</label>
    <type>TextArea</type>
</CustomField>