force-app/main/default/objects/Opportunity/fields/Master_Client_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Master_Client_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master Client Campaign</label>
    <referenceTo>B2B_Campaign__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>