force-app/main/default/objects/Opportunity/fields/Month_13__c.field-meta.xml
<CustomField>
    <fullName>Month_13__c</fullName>
    <formula>Month_1__c * (1- Year_0_Cancel_Rate_HMS__c )</formula>
    <label>Month 13</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>