force-app/main/default/objects/Opportunity/fields/Month_1__c.field-meta.xml
<CustomField>
    <fullName>Month_1__c</fullName>
    <formula>Estimated_Annual_Gross_Sales_HMS__c</formula>
    <label>Month 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>