force-app/main/default/objects/Opportunity/fields/Month_25__c.field-meta.xml
<CustomField>
    <fullName>Month_25__c</fullName>
    <formula>Month_13__c * (1 -  Year_1_Cancel_Rate_HMS__c )</formula>
    <label>Month 25</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>