force-app/main/default/objects/Opportunity/fields/NDA__c.field-meta.xml
<CustomField>
    <fullName>NDA__c</fullName>
    <formula>Account.NDA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NDA</label>
    <type>Checkbox</type>
</CustomField>