force-app/main/default/objects/Opportunity/fields/New_Business_ARPU_2__c.field-meta.xml
<CustomField>
    <fullName>New_Business_ARPU_2__c</fullName>
    <label>New Business ARPU - Calculated</label>
    <summarizedField>OpportunityLineItem.New_Business_ARPU__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>