force-app/main/default/objects/Opportunity/fields/New_Business_ARPU__c.field-meta.xml
<CustomField>
    <fullName>New_Business_ARPU__c</fullName>
    <description>HMS field</description>
    <label>New Business ARPU</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>