force-app/main/default/objects/Opportunity/fields/New_technology_required__c.field-meta.xml
<CustomField>
    <fullName>New_technology_required__c</fullName>
    <label>New technology required</label>
    <type>TextArea</type>
</CustomField>