force-app/main/default/objects/Opportunity/fields/Number_of_Marketing_Days_in_Year__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Marketing_Days_in_Year__c</fullName>
    <defaultValue>1</defaultValue>
    <inlineHelpText>Number of Days Marketing will not occur in following year</inlineHelpText>
    <label>Number of Days Marketing will not occur</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>