force-app/main/default/objects/Opportunity/fields/On_Hold_Category__c.field-meta.xml
<CustomField>
    <fullName>On_Hold_Category__c</fullName>
    <description>Allows for an on-hold opportunity to be identified as being on-hold by Cinch (meaning we put it on hold) or on-hold due to Client Delay (meaning the client put the oppty on hold)</description>
    <inlineHelpText>Opportunity must be On-Hold (50%) in order to select this field.

1) &apos;Cinch On-Hold&apos; is an opportunity that we have determined is on hold. 
2) &apos;Client Delay&apos; is an opportunity that the client has put on hold.</inlineHelpText>
    <label>On Hold Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cinch On-Hold</fullName>
            </value>
            <value>
                <fullName>Client Delay</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>