force-app/main/default/objects/Opportunity/fields/One_Year_Earned_Revenue__c.field-meta.xml
<CustomField>
    <fullName>One_Year_Earned_Revenue__c</fullName>
    <formula>Estimated_Annual_Gross_Sales_HMS__c *  New_Business_ARPU__c</formula>
    <label>One Year Earned Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>