force-app/main/default/objects/Opportunity/fields/One_Year_Earned_Revenue_Total__c.field-meta.xml
<CustomField>
    <fullName>One_Year_Earned_Revenue_Total__c</fullName>
    <label>Projected Single Campaign 1 Year Revenue</label>
    <summarizedField>OpportunityLineItem.One_Year_Earned_Revenue__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>