force-app/main/default/objects/Opportunity/fields/Operational_Deviations_from_Std_Deal__c.field-meta.xml
<CustomField>
    <fullName>Operational_Deviations_from_Std_Deal__c</fullName>
    <label>Operational Deviations from Std Deal</label>
    <type>TextArea</type>
</CustomField>