force-app/main/default/objects/Opportunity/fields/Opportunity_Profit_Margin__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Profit_Margin__c</fullName>
    <defaultValue>20/100</defaultValue>
    <inlineHelpText>Usually 20%, this field must be populated for the Projected Opportunity Lifetime Revenue and Projected Opportunity Lifetime Profit to populate.</inlineHelpText>
    <label>Projected Opportunity Profit Margin (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>