force-app/main/default/objects/Opportunity/fields/Opportunity_Status__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Status__c</fullName>
    <description>This field denotes a warm opportunity vs a cold one.  A cold opportunity is defined as one where no activity has taken place on the opportunity in 6 months.</description>
    <inlineHelpText>Cold = No Activity in 6 months</inlineHelpText>
    <label>Opportunity Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Warm</fullName>
                <default>true</default>
                <label>Warm</label>
            </value>
            <value>
                <fullName>Cold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>