force-app/main/default/objects/Opportunity/fields/Potential_Annual_Warranty_Volume__c.field-meta.xml
<CustomField>
    <fullName>Potential_Annual_Warranty_Volume__c</fullName>
    <label>Potential Annual Warranty Volume</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>