force-app/main/default/objects/Opportunity/fields/Production_Costs_Total__c.field-meta.xml
<CustomField>
    <fullName>Production_Costs_Total__c</fullName>
    <formula>Cost_per_Acquisition__c *  Master_Client_Campaign__r.Est_Single_Camp_Enrollments__c</formula>
    <label>Production Costs Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>