force-app/main/default/objects/Opportunity/fields/Projected_Next_Year_Earned_Revenue_HMS__c.field-meta.xml
<CustomField>
    <fullName>Projected_Next_Year_Earned_Revenue_HMS__c</fullName>
    <formula>One_Year_Earned_Revenue__c *
((365-Number_of_Marketing_Days_in_Year__c)/365)</formula>
    <label>Projected Next Year Earned Revenue - HMS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>