force-app/main/default/objects/Opportunity/fields/Projected_Opportunity_Lifetime_Profit__c.field-meta.xml
<CustomField>
    <fullName>Projected_Opportunity_Lifetime_Profit__c</fullName>
    <label>Projected Opportunity Lifetime Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>