force-app/main/default/objects/Opportunity/fields/Projected_Opportunity_Lifetime_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Projected_Opportunity_Lifetime_Revenue__c</fullName>
    <label>Projected Opportunity Lifetime Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>