force-app/main/default/objects/Opportunity/fields/Proxy_Like_Existing_Client_s__c.field-meta.xml
<CustomField>
    <fullName>Proxy_Like_Existing_Client_s__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proxy / Like Existing Client(s)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Proxy / Like Existing Client(s))</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>