force-app/main/default/objects/Opportunity/fields/Reset_Cancellation_Rates__c.field-meta.xml
<CustomField>
    <fullName>Reset_Cancellation_Rates__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reset Cancellation Rates</label>
    <type>Checkbox</type>
</CustomField>