force-app/main/default/objects/Opportunity/fields/Reset_Estimated_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Reset_Estimated_Close_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reset Estimated Dates</label>
    <type>Checkbox</type>
</CustomField>