force-app/main/default/objects/Opportunity/fields/Responsible_for_Acquisition__c.field-meta.xml
<CustomField>
    <fullName>Responsible_for_Acquisition__c</fullName>
    <label>Responsible for Acquisition</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>CCHS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>