force-app/main/default/objects/Opportunity/fields/Reviewed_Business_ARPU__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_Business_ARPU__c</fullName>
    <description>HMS</description>
    <label>Renewal Business ARPU</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>