force-app/main/default/objects/Opportunity/fields/Subscriber_Billing_Term_in_years__c.field-meta.xml
<CustomField>
    <fullName>Subscriber_Billing_Term_in_years__c</fullName>
    <label>Subscriber Billing Term (in years)</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>