force-app/main/default/objects/Opportunity/fields/Total_Campaigns__c.field-meta.xml
<CustomField>
    <fullName>Total_Campaigns__c</fullName>
    <formula>Master_Client_Campaign__r.Estimated_of_Annual_Campaigns__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Campaigns</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>