force-app/main/default/objects/Opportunity/fields/VP_RVP__c.field-meta.xml
<CustomField>
    <fullName>VP_RVP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>For HMS only</description>
    <label>VP/RVP</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>equals</operation>
            <value>HMS Executive</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities_LK_User</relationshipName>
    <type>Lookup</type>
</CustomField>