force-app/main/default/objects/Opportunity/fields/What_will_it_take_to_win__c.field-meta.xml
<CustomField>
    <fullName>What_will_it_take_to_win__c</fullName>
    <label>What will it take to win?</label>
    <type>TextArea</type>
</CustomField>