force-app/main/default/objects/Opportunity/fields/X5_Year_Earned_Revenue__c.field-meta.xml
<CustomField>
    <fullName>X5_Year_Earned_Revenue__c</fullName>
    <formula>( One_Year_Earned_Revenue__c + 
	( New_Business_ARPU__c *  Year_1_Midpoint__c ) + 
	( New_Business_ARPU__c *  Year_2_Midpoint__c ) +
	( New_Business_ARPU__c *  Year_3_Midpoint__c ) +
	( New_Business_ARPU__c *  Year_4_Midpoint__c ))</formula>
    <label>5 Year Earned Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>