force-app/main/default/objects/Opportunity/fields/X5_Year_Op_Target_HMS__c.field-meta.xml
<CustomField>
    <fullName>X5_Year_Op_Target_HMS__c</fullName>
    <defaultValue>&quot;15%+&quot;</defaultValue>
    <description>HMS</description>
    <label>5 Year Op Target</label>
    <length>5</length>
    <type>Text</type>
</CustomField>