force-app/main/default/objects/Opportunity/fields/Year_0_Assumed_Cancel_Rate__c.field-meta.xml
<CustomField>
    <fullName>Year_0_Assumed_Cancel_Rate__c</fullName>
    <label>Year 0 Assumed Cancel Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>